--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
-    <script>
-      require('./src/index.js')
-    </script>
+    <div id="app"></div> 
   </body>
+  <script src="/dist/app.min.js"></script>
 </html>
