--- a/src/index.html
+++ b/src/index.html
@@ -7,4 +7,7 @@
   <body>
       <div id="app"></div>
   </body>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Fira+Mono|Overpass+Mono');
+  </style>
 </html>
