--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
       <div id="app"></div>
   </body>
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Fira+Mono|Overpass+Mono');
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:200');
   </style>
 </html>
